refactor: :recycle: refactor on keywords property on articles

--- a/content/articles/como-nombrar-variables-javascript.mdx
+++ b/content/articles/como-nombrar-variables-javascript.mdx
@@ -10,10 +10,7 @@ tags:
   - "javascript"
   - "typescript"
   - "variables"
-keywords:
-  - "javascript"
-  - "typescript"
-  - "variables"
+keywords: "JavaScript, variables, nombrar, buenas prácticas, convenciones, camelCase, snake_case, PascalCase, legibilidad, mantenibilidad, claridad, coherencia, significado, longitud, abreviaciones, contexto, palabras clave, nombres reservados, estándares, estilo, código limpio, programación."
 ---
 
 Nombrar **variables** en **JavaScript y TypeScript** puede parecer una tarea sencilla, pero en realidad es una habilidad muy importante para cualquier programador. Los **nombres de las variables** no solo deben ser descriptivos y precisos, sino que también deben seguir una convención de nomenclatura adecuada para garantizar la **legibilidad del código** y **evitar errores**.
