--- a/content/articles/configurar-variables-de-entorno-en-react-vite.mdx
+++ b/content/articles/configurar-variables-de-entorno-en-react-vite.mdx
@@ -10,11 +10,7 @@ tags:
   - "react"
   - "vite"
   - "variables de entorno"
-keywords:
-  - "react"
-  - "vite"
-  - "enviroments"
-  - "variables de entorno"
+keywords: "react, vite, variables de entorno, configuración, ambiente de desarrollo, ambiente de producción, entorno local, entorno remoto, .env, .env.local, .env.production, .env.development, seguridad, autenticación, autorización, gestión de secretos, deployment, librerías, rendimiento, optimización."
 ---
 
 En algunas ocasiones, necesitamos utilizar **variables de entorno** en nuestras aplicaciones para **centralizar valores** y **evitar escribir** esos valores directamente en nuestro código. Esto nos proporciona un acceso sencillo y una forma fácil de modificar esos valores sin tener que hacerlo en todos los lugares donde se usan.
