--- a/content/articles/crear-server-nodejs-express-typescript-y-desplegarlo.mdx
+++ b/content/articles/crear-server-nodejs-express-typescript-y-desplegarlo.mdx
@@ -12,12 +12,7 @@ tags:
   - "nodejs"
   - "express"
   - "typescript"
-keywords:
-  - "nodejs"
-  - "express"
-  - "typescript"
-  - "deploy"
-  - "5 minutos"
+keywords: "Node.js, Express, TypeScript, servidor, crear, desplegar, aplicaciones web, desarrollo web, API, endpoints, enrutamiento, middleware, controladores, modelos, autenticación, autorización, JWT, seguridad, gestión de errores, registro, servidor de producción, escalabilidad, rendimiento."
 ---
 
 A veces puede resultar complicado crear un servidor en **Node.js utilizando Express y Typescript**, especialmente debido a la configuración de Typescript y los paquetes necesarios que contienen los archivos de definición.
@@ -153,14 +148,14 @@ port=4000
 Tras todo lo anterior, la **estructura** de nuestro **proyecto** quedaría así:
 
 ```text
-├─ node_modules
-├─ routes
-|  ├─ calculadora.routes.ts
-├─ .env
-├─ index.ts
-├─ package-lock.json
-├─ package.json
-├─ tsconfig.json
+├─ 📁 node_modules
+├─ 📂 routes
+|  ├─ 🖇️ calculadora.routes.ts
+├─ 🖇️ .env
+├─ 🖇️ index.ts
+├─ 🖇️ package-lock.json
+├─ 🖇️ package.json
+├─ 🖇️ tsconfig.json
 ```
 
 ### Iniciar y utilizar nuestra aplicación
