feat: :bento: add og images to articles

--- a/content/articles/7-hooks-mas-importantes-react.mdx
+++ b/content/articles/7-hooks-mas-importantes-react.mdx
@@ -3,6 +3,7 @@ author: "Tomás Cuevas"
 link: "https://www.linkedin.com/in/tomás-cuevas-dev/"
 title: "Domina los Hooks de React: Los 7 más importantes que debes conocer"
 date: "2023-05-12"
+image: "/images/og/hook-en-react-importantes.jpg"
 description: "Los hooks son una de las mejores características de React para mejorar la reutilización y la organización de código. En este artículo, descubre los 7 hooks más importantes de React que todo desarrollador debería conocer. Desde useState hasta useContext, explora cómo puedes utilizar estos hooks para mejorar la eficiencia y la funcionalidad de tus aplicaciones de React. Si deseas llevar tus habilidades de programación en React al siguiente nivel, ¡no puedes perderte esta guía imprescindible sobre los hooks de React!"
 cardDescription: "Si estás construyendo aplicaciones **React**, los **Hooks** son el equivalente a tener en tus manos herramientas de construcción de alta calidad. Con ellos, _puedes crear aplicaciones duraderas y de alta calidad de manera_ **eficiente y sin esfuerzo**. Pero, **¿sabes cuáles son los 7 Hooks más importantes de React?**. En este artículo, **descubrirás** _cómo utilizarlos_, _para qué sirven_ y _por qué deberías incluirlos en tus proyectos_. Prepárate para llevar tus habilidades de desarrollo al siguiente nivel."
 category: "react"
