--- a/content/articles/clonar-objetos-javascript.mdx
+++ b/content/articles/clonar-objetos-javascript.mdx
@@ -3,6 +3,7 @@ author: "Tomás Cuevas"
 link: "https://www.linkedin.com/in/tomás-cuevas-dev/"
 title: "StructuredClone: La solución para clonar objetos en JavaScript sin errores"
 date: "2023-05-16"
+image: "/images/og/structured-clone-js.jpg"
 description: "Tanto si eres un principiante en JavaScript como un desarrollador experimentado, descubre por qué utilizar structuredClone es esencial para la manipulación eficiente de objetos en JavaScript. En nuestro artículo, exploramos en detalle cómo structuredClone se compara con otros métodos populares, como Object.assign(), JSON.parse(), JSON.stringify() y el operador spread. Obtén información valiosa sobre las ventajas y desventajas de cada enfoque, y descubre por qué structuredClone destaca como una poderosa opción para clonar objetos en JavaScript. ¡Mejora tu conocimiento en JavaScript y lleva tus habilidades de desarrollo web al siguiente nivel con nuestra guía completa sobre structuredClone y su uso eficiente en tu código!"
 cardDescription: "Cuando trabajas con objetos en JavaScript, a menudo necesitas clonarlos para realizar operaciones sin modificar el objeto original. **Hay varias formas de clonar objetos en JavaScript**, como el operador spread (**...object**), la asignación por objeto (**Object.assign(object)**) y la serialización/deserialización de JSON (**JSON.stringify()** y **JSON.parse()**). Sin embargo, la función **structuredClone()** ofrece algunas ventajas significativas en comparación con estas otras formas de clonar objetos."
 category: "javascript"
