--- a/content/articles/como-nombrar-variables-javascript.mdx
+++ b/content/articles/como-nombrar-variables-javascript.mdx
@@ -3,6 +3,7 @@ author: "Tomás Cuevas"
 link: "https://www.linkedin.com/in/tomás-cuevas-dev/"
 title: "Cómo nombrar nuestras variables en JavaScript correctamente"
 date: "2023-05-09"
+image: "/images/og/nombrar-variables-js-ts.jpg"
 description: "El artículo sobre cómo nombrar las variables en JavaScript es una guía detallada y completa que ofrece las mejores prácticas y reglas para nombrar las variables de manera efectiva y consistente en el lenguaje de programación JavaScript."
 cardDescription: "Nombrar **variables** en **JavaScript y TypeScript** puede parecer una tarea sencilla, pero en realidad es una habilidad muy importante para cualquier programador. Los **nombres de las variables** no solo deben ser descriptivos y precisos, sino que también deben seguir una convención de nomenclatura adecuada para garantizar la **legibilidad del código** y **evitar errores**."
 category: "javascript"
