--- a/content/articles/configurar-variables-de-entorno-en-react-vite.mdx
+++ b/content/articles/configurar-variables-de-entorno-en-react-vite.mdx
@@ -3,6 +3,7 @@ author: "Tomás Cuevas"
 link: "https://www.linkedin.com/in/tomás-cuevas-dev/"
 title: "Configurar variables de entorno en React utilizando Vite"
 date: "2023-03-03"
+image: "/images/og/configurar-variables-entorno-react-vite.jpg"
 description: "En este artículo, te enseñaremos cómo configurar variables de entorno en React de manera sencilla y rápida cuando utilizamos Vite. Además, descubrirás cómo acceder a ellas de una forma más óptima y eficiente. ¡No te pierdas esta guía completa sobre variables de entorno en React con Vite!"
 cardDescription: "En algunas ocasiones, necesitamos utilizar **variables de entorno** en nuestras aplicaciones para **centralizar valores** y **evitar escribir** esos valores directamente en nuestro código. Esto nos proporciona un acceso sencillo y una forma fácil de modificar esos valores sin tener que hacerlo en todos los lugares donde se usan."
 category: "react"
