--- a/content/articles/crear-server-nodejs-express-typescript-y-desplegarlo.mdx
+++ b/content/articles/crear-server-nodejs-express-typescript-y-desplegarlo.mdx
@@ -3,6 +3,7 @@ author: "Tomás Cuevas"
 link: "https://www.linkedin.com/in/tomás-cuevas-dev/"
 title: "Crear un servidor de Nodejs con Express, Typescript y desplegarlo"
 date: "2023-02-28"
+image: "/images/og/create-nodejs-server-express-typescript.jpg"
 description: "¡Mira cómo puedes crear un servidor de Node.js con Express y Typescript y desplegarlo en menos de 5 minutos! Aprende con nuestro artículo que incluye código de ejemplo e imágenes para guiarte en todo el proceso. ¡No te lo pierdas!"
 cardDescription: "A veces puede resultar complicado crear un servidor en **Node.js utilizando Express y Typescript**, especialmente debido a la configuración de Typescript y los paquetes necesarios que contienen los archivos de definición.
 
